fixed memory issue

--- a/Velocity_and_Angle_vs_Height.ipynb
+++ b/Velocity_and_Angle_vs_Height.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "metadata": {
     "id": "sQAj1bFMxzuU"
    },
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "metadata": {
     "id": "56O43jusJzuD"
    },
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 27,
    "metadata": {
     "id": "5YBcFHN0Uy-3"
    },
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 28,
    "metadata": {
     "id": "emvo0DPJRwOm"
    },
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 29,
    "metadata": {
     "id": "g51zdCPox3zM"
    },
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 30,
    "metadata": {
     "id": "FOkyAt29qdbc"
    },
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 31,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -196,7 +196,7 @@
        "2.6170999999999998"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 19,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -229,7 +229,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a37f82b2e8a34dadb84460a77fa55d5e",
+       "model_id": "0635019327c44cc6a5cf3ae186e8c085",
        "version_major": 2,
        "version_minor": 0
       },
@@ -268,12 +268,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "metadata": {
-    "id": "TQoXKfG-yV7u",
-    "jupyter": {
-     "source_hidden": true
-    }
+    "id": "TQoXKfG-yV7u"
    },
    "outputs": [],
    "source": [
@@ -287,33 +284,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "id": "NAEo0bc9fKx9",
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
-   "outputs": [],
-   "source": [
-    "array1=np.arange(1.0, 90.1, 0.1)\n",
-    "array2=np.arange(0.001, 90.001, 0.001)\n",
-    "A, B = np.meshgrid(angle, velocity)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 35,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
-    "collapsed": true,
     "id": "8JzkQekKFJbI",
-    "jupyter": {
-     "outputs_hidden": true,
-     "source_hidden": true
-    },
     "outputId": "e3f45e73-4f87-46cd-f574-d1e95fe5434c"
    },
    "outputs": [
@@ -321,49 +297,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 499 ms\n"
+      "Wall time: 35.9 ms\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([[-4.41583948e+05, -4.41612195e+05, -4.41643135e+05, ...,\n",
-       "        -3.62300179e+10, -1.44919632e+11, -1.98022905e+35],\n",
-       "       [-1.10395573e+05, -1.10402631e+05, -1.10410362e+05, ...,\n",
-       "        -9.05750382e+09, -3.62299066e+10, -4.95057261e+34],\n",
-       "       [-4.90643922e+04, -4.90675260e+04, -4.90709592e+04, ...,\n",
-       "        -4.02555678e+09, -1.61021798e+10, -2.20025450e+34],\n",
-       "       ...,\n",
-       "       [ 5.51658547e-01,  5.56896249e-01,  5.62134299e-01, ...,\n",
-       "         8.01955896e+02,  1.48746312e+03, -3.16887347e+26],\n",
-       "       [ 5.51658603e-01,  5.56896306e-01,  5.62134355e-01, ...,\n",
-       "         8.01960534e+02,  1.48748168e+03, -3.16861996e+26],\n",
-       "       [ 5.51658660e-01,  5.56896362e-01,  5.62134412e-01, ...,\n",
-       "         8.01965172e+02,  1.48750023e+03, -3.16836647e+26]])"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "%time findHeightAtTarget(A, B)"
+    "%time Z = findHeightAtTarget(X, Y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 36,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
-    "collapsed": true,
     "id": "_Ld5TOIT39T6",
-    "jupyter": {
-     "outputs_hidden": true,
-     "source_hidden": true
-    },
     "outputId": "dddafc80-a1f9-4866-f12d-fe4a4f749054"
    },
    "outputs": [
@@ -371,34 +320,43 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 4min 31s\n"
+      "Wall time: 5.79 s\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([[-4.41584495e+07, -1.10396120e+07, -4.90649390e+06, ...,\n",
-       "         5.46913292e-01,  5.46913413e-01,  5.46913534e-01],\n",
-       "       [-4.41612747e+07, -1.10403183e+07, -4.90680781e+06, ...,\n",
-       "         5.52150691e-01,  5.52150812e-01,  5.52150933e-01],\n",
-       "       [-4.41643693e+07, -1.10410919e+07, -4.90715164e+06, ...,\n",
-       "         5.57388408e-01,  5.57388529e-01,  5.57388650e-01],\n",
+       "array([[-4.41583948e+05, -1.10395573e+05, -4.90643922e+04, ...,\n",
+       "         4.81598493e-01,  4.81655118e-01,  4.81711675e-01],\n",
+       "       [-4.41612195e+05, -1.10402631e+05, -4.90675260e+04, ...,\n",
+       "         4.86831714e-01,  4.86888342e-01,  4.86944902e-01],\n",
+       "       [-4.41643135e+05, -1.10410362e+05, -4.90709592e+04, ...,\n",
+       "         4.92064853e-01,  4.92121486e-01,  4.92178050e-01],\n",
        "       ...,\n",
-       "       [-3.62300187e+12, -9.05750467e+11, -4.02555763e+11, ...,\n",
-       "         4.12629140e+02,  4.12639080e+02,  4.12649020e+02],\n",
-       "       [-1.44919633e+13, -3.62299084e+12, -1.61021815e+12, ...,\n",
-       "        -6.98391570e+01, -6.97993965e+01, -6.97596374e+01],\n",
-       "       [-1.98022905e+37, -4.95057261e+36, -2.20025450e+36, ...,\n",
-       "        -2.44483588e+27, -2.44478155e+27, -2.44472722e+27]])"
+       "       [-1.61023117e+10, -4.02557750e+09, -1.78914524e+09, ...,\n",
+       "        -2.00704455e+03, -2.00497974e+03, -2.00291741e+03],\n",
+       "       [-3.62300179e+10, -9.05750382e+09, -4.02555678e+09, ...,\n",
+       "        -4.94615582e+03, -4.94151002e+03, -4.93686979e+03],\n",
+       "       [-1.44919632e+11, -3.62299066e+10, -1.61021798e+10, ...,\n",
+       "        -2.15049137e+04, -2.14863306e+04, -2.14677697e+04]])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "%time std(array1, array2)"
+    "%time std(angle, velocity)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del X, Y, angle, velocity"
    ]
   },
   {
@@ -478,66 +436,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 49,
    "metadata": {
-    "id": "Gm-AMfLXnK9L",
-    "jupyter": {
-     "source_hidden": true
-    }
+    "id": "Gm-AMfLXnK9L"
    },
    "outputs": [],
    "source": [
     "def normalCondition(array):\n",
-    "  u = -0.5\n",
-    "  b = 0.5\n",
-    "  for i in range(len(array)):\n",
-    "    if array[i]<b and array[i]>u:\n",
-    "      array[i]=0\n",
-    "      \n",
-    "test = np.linspace(-1, 1, 20000001, dtype=\"float32\")"
+    "    u = -0.5\n",
+    "    b = 0.5\n",
+    "    l = len(array[0])\n",
+    "    for i in range(len(array)):\n",
+    "        for j in range(l):\n",
+    "            if array[i][j]<b and array[i][j]>u:\n",
+    "                array[i][j]=0\n",
+    "            else:\n",
+    "                array[i][j]=1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 50,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
-    "collapsed": true,
-    "id": "sFYiL7Rsodfw",
-    "jupyter": {
-     "outputs_hidden": true,
-     "source_hidden": true
-    },
-    "outputId": "5b1fe0b3-7aaf-41f3-9689-b339d3f6e5de"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Wall time: 6.56 s\n"
-     ]
-    }
-   ],
-   "source": [
-    "%time normalCondition(test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "collapsed": true,
     "id": "jjVgYE2utwVN",
-    "jupyter": {
-     "outputs_hidden": true,
-     "source_hidden": true
-    },
     "outputId": "5a0baa55-6251-4214-a4f7-00b7a9b31bf8"
    },
    "outputs": [
@@ -545,23 +469,51 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 85.7 ms\n"
+      "Wall time: 7.98 ms\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([-1.        , -0.99999988, -0.99999982, ...,  0.99999982,\n",
-       "        0.99999988,  1.        ])"
+       "array([[1, 1, 1, ..., 1, 1, 1],\n",
+       "       [1, 1, 1, ..., 1, 1, 1],\n",
+       "       [1, 1, 1, ..., 1, 1, 1],\n",
+       "       ...,\n",
+       "       [1, 1, 1, ..., 1, 1, 1],\n",
+       "       [1, 1, 1, ..., 1, 1, 1],\n",
+       "       [1, 1, 1, ..., 1, 1, 1]], dtype=int64)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "%time vecCondition(test)"
+    "%time vecCondition(Z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "sFYiL7Rsodfw",
+    "outputId": "5b1fe0b3-7aaf-41f3-9689-b339d3f6e5de"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 2.16 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%time normalCondition(Z)"
    ]
   }
  ],
